infrastructure/kubernetes/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: khaliqgant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: khaliqgant
  template:
    metadata:
      labels:
        app: khaliqgant
    spec:
      containers:
      - name: khaliqgant
        image: khaliqgant
        ports:
          - name: nginx-http
            containerPort: 80
          - name: nginx-https
            containerPort: 443
