infrastructure/kubernetes/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: khaliqgant
spec:
    ports:
    - name: http
      port: 80
      targetPort: nginx-http
    - name: https
      port: 443
      targetPort: nginx-https
    selector:
        app: khaliqgant
