infrastructure/kubernetes/manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: khaliqgant
spec:
  tls:
  - hosts:
    - "khaliqgant.com"
    secretName: tls-secret
  rules:
  - host: khaliqgant.com
    http:
      paths:
      - path: /
        backend:
          serviceName: khaliqgant
          servicePort: 80
